--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,17 @@ h6 {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
+.address-mail:hover .envelope-phone,
+.address-mail:active .envelope-phone,
+.address-tel:hover .telephone-icon,
+.address-tel:active .telephone-icon {
+  color: var(--accent-color);
+  fill: var(--accent-color);
+  stroke: var(--accent-color);
+}
+
+
 .active-link {
   position: relative;
   color: var(--accent-color);
@@ -649,12 +660,18 @@ h6 {
 /* OKNO MODALNE */
 
 .backdrop {
+  width: 100vw;
+  height: 100vh;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.2);
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 99;
 }
 
 .modal {
